# ESIR3_IN

ES/marchingCubes/: .directory  ESIR 3 IN SFX Marching Cubes.htm  table. js
ES/marchingSquare/: CMakeLists.txt  info  marchingSquare  marchingSquare.cpp
ES/tuto1/ogreapp/: CMakeLists.txt  TutorialApplication.cpp  TutorialApplication.h
ES/tuto1/ogreapp_build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
ES/tuto2/src/: TutorialApplication.cpp  TutorialApplication.h
ES/tuto3/src/: CMakeLists.txt  TutorialApplication.cpp  TutorialApplication.h
IMM/: tp1.odt
IMM/IM_tp1_donnees/: coupe_aff.m~~  least_square.m  least_square.m~  plan_least_square.m
IMM/TP3/donnees/: Hist2.m  SSD.m  TP3.m  information_mutuelle.m  transfo.mat  transfo_rigide.m
IMM/projet/: sources
IMM/projet/Bk_matlab/: BK_UnitTest.m  CMakeLists.txt~  Makefile
IMM/projet/gc/: CMakeCache.txt  Makefile  cmake_install.cmake
IMM/tp1/: tp1.odt
IMM/tp2/: tp2.odt
VO/TP-code/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  TP0  TP0.cpp  TP1  TP1.cpp  TP1.cpp~  TP11.cpp  TP2  TP2.cpp  TP2.cpp~  TP3  TP3.cpp  TP3.cpp~  TP4  TP4.cpp  TP4.cpp~  cmake_install.cmake
VO/tp0/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lena.ppm  tutorial-viewer  tutorial-viewer.cpp
VO/tp1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  vpAsservissementVisuel  vpAsservissementVisuel.cpp  vpAsservissementVisuel.cpp~
VO/tpEigen/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  vpEigenFace  vpEigenFace.cpp
(+37 files in other folders)
